# interpretable-models

./: .gitignore  README.md  pyproject.toml  run_bench.sh
.github/workflows/: benchmarks.yml  bump-version.yml  publish.yml  release.yml  tests.yml
bench/: generate_cases.py  run_bench.py  run_suite.py  visual_2d.py  visual_2d_xor.py
bench_out_v1/: imbalanced_results.json  linear_results.json  noisy_highdim_results.json  thresholds_results.json  xor_results.json
bench_out_v1/rules/: imbalanced_seed0_A_logreg_rules.json  imbalanced_seed0_B_tree_rules.txt  imbalanced_seed0_C_rulefit_rules.json  imbalanced_seed1_A_logreg_rules.json  imbalanced_seed1_B_tree_rules.txt  imbalanced_seed1_C_rulefit_rules.json  imbalanced_seed2_A_logreg_rules.json  imbalanced_seed2_B_tree_rules.txt  imbalanced_seed2_C_rulefit_rules.json  linear_seed0_A_logreg_rules.json  linear_seed0_B_tree_rules.txt  linear_seed0_C_rulefit_rules.json  linear_seed1_A_logreg_rules.json  linear_seed1_B_tree_rules.txt  linear_seed1_C_rulefit_rules.json  linear_seed2_A_logreg_rules.json  linear_seed2_B_tree_rules.txt  linear_seed2_C_rulefit_rules.json  noisy_highdim_seed0_A_logreg_rules.json  noisy_highdim_seed0_B_tree_rules.txt  noisy_highdim_seed0_C_rulefit_rules.json  noisy_highdim_seed1_A_logreg_rules.json  noisy_highdim_seed1_B_tree_rules.txt  noisy_highdim_seed1_C_rulefit_rules.json  noisy_highdim_seed2_A_logreg_rules.json  noisy_highdim_seed2_B_tree_rules.txt  noisy_highdim_seed2_C_rulefit_rules.json  thresholds_seed0_A_logreg_rules.json  thresholds_seed0_B_tree_rules.txt  thresholds_seed0_C_rulefit_rules.json  thresholds_seed1_A_logreg_rules.json  thresholds_seed1_B_tree_rules.txt  thresholds_seed1_C_rulefit_rules.json  thresholds_seed2_A_logreg_rules.json  thresholds_seed2_B_tree_rules.txt  thresholds_seed2_C_rulefit_rules.json  thresholds_seed3_A_logreg_rules.json  thresholds_seed3_B_tree_rules.txt  thresholds_seed3_C_rulefit_rules.json  thresholds_seed4_A_logreg_rules.json  (+11 more)
src/rulefit-lite/: __init__.py  classifier.py
src/rulefit_lite/: __init__.py  classifier.py  linear_rules.py
tests/: conftest.py  test_benchmarks.py  test_interpretability.py
